--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Maintenance Home</title>
-  <style>
-    body { font-family: Arial; text-align: center; padding: 50px; }
-    a { display: block; margin: 20px; font-size: 24px; text-decoration: none; color: #333; }
-    a:hover { color: #007bff; }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>Equipment Maintenance Portal</h1>
