--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Maintenance Home</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Equipment Maintenance Log</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h1>Equipment Maintenance Portal</h1>
-  <a href="equipment.html">📋 View Equipment List</a>
-  <a href="report-hours.html">⏱️ Report Hours</a>
-  <a href="report-issue.html">⚠️ Report an Issue</a>
+  <div class="container">
+    <h1>Equipment Maintenance Log</h1>
+    <a class="nav-button" href="equipment.html">📋 Equipment List</a>
+    <a class="nav-button" href="report-hours.html">⏱️ Report Hours</a>
+    <a class="nav-button" href="report-issue.html">🛠️ Report an Issue</a>
+    <a class="nav-button" href="add-equipment.html">➕ Add Equipment</a>
+    <div class="footer">Maintained by Your Company · 2025</div>
+  </div>
 </body>
 </html>
