--- a/index.html
+++ b/index.html
@@ -2,84 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Equipment Maintenance Hub</title>
-  <style>
-    :root {
-      --bg: #121212;
-      --surface: #1E1E1E;
-      --accent: #00BFFF;
-      --text: #FFFFFF;
-      --text-muted: #AAAAAA;
-      --hover: #2A2A2A;
-    }
-
-    body {
-      background-color: var(--bg);
-      color: var(--text);
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-
-    .container {
-      background-color: var(--surface);
-      padding: 40px;
-      border-radius: 12px;
-      text-align: center;
-      width: 90%;
-      max-width: 500px;
-      box-shadow: 0 0 10px rgba(0, 255, 255, 0.1);
-    }
-
-    h1 {
-      margin-bottom: 1rem;
-      font-size: 2rem;
-      font-weight: bold;
-      color: var(--accent);
-    }
-
-    .nav-button {
-      display: block;
-      background-color: var(--hover);
-      color: var(--text);
-      padding: 15px 20px;
-      margin: 15px auto;
-      width: 100%;
-      border: none;
-      border-radius: 8px;
-      font-size: 1.1rem;
-      font-weight: 600;
-      cursor: pointer;
-      text-decoration: none;
-      transition: background-color 0.2s ease;
-    }
-
-    .nav-button:hover {
-      background-color: var(--accent);
-      color: #000;
-    }
-
-    .footer {
-      margin-top: 2rem;
-      font-size: 0.85rem;
-      color: var(--text-muted);
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Equipment Maintenance Log</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="container">
-    <h1>Maintenance Dashboard</h1>
-
-    <a class="nav-button" href="equipment-list.html">📋 Equipment List</a>
-    <a class="nav-button" href="report-hours.html">⏱ Report Hours</a>
-    <a class="nav-button" href="report-issue.html">🛠 Report an Issue</a>
-    <a class="nav-button" href="add-equipment.html">➕ Add New Equipment</a>
-
-    <div class="footer">v1.0 • Minimal Bold Dark Mode</div>
+    <h1>Equipment Maintenance Log</h1>
+    <a class="nav-button" href="equipment.html">📋 Equipment List</a>
+    <a class="nav-button" href="report-hours.html">⏱️ Report Hours</a>
+    <a class="nav-button" href="report-issue.html">🛠️ Report an Issue</a>
+    <a class="nav-button" href="add-equipment.html">➕ Add Equipment</a>
+    <div class="footer">Maintained by Your Company · 2025</div>
   </div>
 </body>
 </html>
