--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Equipment Maintenance Log</title>
+  <title>Equipment Management</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -12,7 +12,7 @@
     <a class="nav-button" href="equipment.html">📋 Equipment List</a>
     <a class="nav-button" href="report-hours.html">⏱️ Report Hours</a>
     <a class="nav-button" href="report-issue.html">🛠️ Report an Issue</a>
-    <div class="footer">Maintained by Your Company · 2025</div>
+    <div class="footer">Maintained by xTuRB0x · 2025</div>
   </div>
 </body>
 </html>
