--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Equipment Maintenance Log</h1>
+    <h1>Equipment Management</h1>
     <a class="nav-button" href="equipment.html">📋 Equipment List</a>
     <a class="nav-button" href="report-hours.html">⏱️ Report Hours</a>
     <a class="nav-button" href="report-issue.html">🛠️ Report an Issue</a>
