--- a/equipment.html
+++ b/equipment.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Equipment List</title>
-  <link rel="stylesheet" href="styles.css" />      
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
     <h1>Equipment List</h1>
   </header>
-  <main>
+  <main class="card">
     <table>
       <thead>
         <tr>
@@ -32,6 +32,7 @@
       <button onclick="location.href='index.html'">⬅️ Back to Home</button>
     </div>
   </main>
+
   <script src="data.js"></script>
   <script>
     const table = document.getElementById('equipment-table');
