--- a/add-equipment.html
+++ b/add-equipment.html
@@ -46,7 +46,7 @@
     </form>
 
     <div class="actions">
-      <button onclick="location.href='index.html'">⬅️ Back to Home</button>
+      <a class="secondary-button" href="equipment.html">⬅️ Back to Equipment List</a>
     </div>
   </main>
 
