--- a/add-equipment.html
+++ b/add-equipment.html
@@ -5,12 +5,64 @@
   <title>Add Equipment</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css" />
+  <style>
+    /* Minimal inline overrides for better mobile experience */
+    body {
+      padding: 1rem;
+    }
+
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 1.5rem;
+    }
+
+    .form-group input {
+      width: 100%;
+    }
+
+    .form {
+      width: 100%;
+    }
+
+    main.card {
+      padding: 1.5rem;
+      margin: 1rem auto;
+      width: 100%;
+    }
+
+    .actions {
+      text-align: center;
+      margin-top: 2rem;
+    }
+
+    @media (max-width: 480px) {
+      .primary-button {
+        font-size: 1rem;
+        width: 100%;
+      }
+
+      .secondary-button {
+        display: block;
+        width: 100%;
+        text-align: center;
+        margin-top: 1rem;
+      }
+
+      .form-group label {
+        font-size: 0.95rem;
+      }
+
+      h1 {
+        font-size: 1.75rem;
+      }
+    }
+  </style>
 </head>
 <body>
   <header>
     <h1>Add Equipment</h1>
   </header>
-  <main class="card">
+  <main class="card container">
     <form id="equipmentForm" class="form">
       <div class="form-group">
         <label for="year">Year</label>
